-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
java.lang.AssertionError: ResolvedJavaType.getInstanceFields order differs from Class.getDeclaredFields expected:<HotSpotResolvedJavaFieldImpl<java.util.HashMap$HashIterator.expectedModCount int:12>> but was:<HotSpotResolvedJavaFieldImpl<java.util.HashMap$HashIterator.next HashMap$Node:20>>
at org.junit.Assert.fail(Assert.java:89)
at org.junit.Assert.failNotEquals(Assert.java:835)
at org.junit.Assert.assertEquals(Assert.java:120)
at jdk.vm.ci.runtime.test.TestResolvedJavaType.getInstanceFieldsTest(TestResolvedJavaType.java:973)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at org.junit.Assert.fail(Assert.java:89)
at org.junit.Assert.failNotEquals(Assert.java:835)
at org.junit.Assert.assertEquals(Assert.java:120)
at jdk.vm.ci.runtime.test.TestResolvedJavaType.getInstanceFieldsTest(TestResolvedJavaType.java:973)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
- caused by
-
JDK-8354366 [lworld] VirtualObjectDebugInfoTest fails after merging jdk-25+16
-
- Resolved
-
- is blocked by
-
JDK-8361250 [lworld] use more IRNode regexes in valhalla IR tests
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/b2e518b7
-
Review(lworld)
openjdk/valhalla/1511