8357785: [lworld] TestResolvedJavaType fails due to unexpected getInstanceFields order 8357186: [lworld] Clean up InlineKlass::collect_fields

Reviewed-by: qamai, thartmann